; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_op_CHK.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_op_CHK.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INSN_GET_REG = common dso_local global i32 0, align 4
@current_entry = common dso_local global i32 0, align 4
@reg = common dso_local global i32 0, align 4
@EA_ADDRESS_REG = common dso_local global i64 0, align 8
@SIZE_W = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @op_CHK to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @op_CHK(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* @INSN_GET_REG, align 4
  %8 = load i32, i32* @current_entry, align 4
  %9 = load i32, i32* @reg, align 4
  %10 = mul nsw i32 %9, 4
  %11 = call i32 @JIT_EMIT_GET_OP1_REGISTER(i32 %8, i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = call i64 @EA_MODE(i32 %12)
  %14 = load i64, i64* @EA_ADDRESS_REG, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @op_ill(i32* %17, i32 %18)
  store i32 %19, i32* %3, align 4
  br label %35

20:                                               ; preds = %2
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* @SIZE_W, align 4
  %24 = call i32 @ea_get(i32* %21, i32 %22, i32 %23, i32 0, i32* %6, i32 2)
  %25 = load i32, i32* %6, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %20
  store i32 1, i32* %3, align 4
  br label %35

28:                                               ; preds = %20
  %29 = load i32, i32* @current_entry, align 4
  %30 = load i32, i32* %6, align 4
  %31 = add nsw i32 10, %30
  %32 = call i32 @JIT_EMIT_ADD_CYCLES(i32 %29, i32 %31)
  %33 = load i32, i32* @current_entry, align 4
  %34 = call i32 @JIT_EMIT_CHK_W(i32 %33)
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %28, %27, %16
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @JIT_EMIT_GET_OP1_REGISTER(i32, i32) #1

declare dso_local i64 @EA_MODE(i32) #1

declare dso_local i32 @op_ill(i32*, i32) #1

declare dso_local i32 @ea_get(i32*, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @JIT_EMIT_ADD_CYCLES(i32, i32) #1

declare dso_local i32 @JIT_EMIT_CHK_W(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
